set up todo api

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Smarthub
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/smarthub_db
+spring.datasource.username=smarthub
+spring.datasource.password=secret
+spring.jpa.hibernate.ddl-auto=update
+
